--- a/about.html
+++ b/about.html
@@ -80,7 +80,11 @@
       </section>
       <section class="play">
         <div class="video-container">
-          <iframe src="//www.youtube.com/embed/0TrVXySLS0A?si=LqXQRX3PyAH7FQC_">
+          <iframe width="392" height="220" 
+            src="https://www.youtube.com/embed/fKibOIc2xuM?si=exuP9U2EZQKLA6Qq" 
+            title="YouTube video player" frameborder="0" 
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
           </iframe>
         </div>
         <div>
@@ -123,7 +127,7 @@
         <div class="teacher__cards">
           <div class="card">
             <div class="card-image">
-              <img src="./image/woman.jpg" alt="teacher 1" />
+              <img src="https://avatar.iran.liara.run/public/girl?username=Maria" alt="teacher 1" />
               <div class="card-overlay">
                 <a href="https://www.instagram.com" target="_blank">
                   <div class="icon">
@@ -139,7 +143,7 @@
           </div>
           <div class="card">
             <div class="card-image">
-              <img src="./image/woman.jpg" alt="teacher 2" />
+              <img src="https://avatar.iran.liara.run/public/boy?username=Scott" alt="teacher 2" />
               <div class="card-overlay">
                 <a href="https://www.instagram.com" target="_blank">
                   <div class="icon">
@@ -155,7 +159,7 @@
           </div>
           <div class="card">
             <div class="card-image">
-              <img src="./image/woman.jpg" alt="teacher 3" />
+              <img src="https://avatar.iran.liara.run/public/boy" alt="teacher 3" />
               <div class="card-overlay">
                 <a href="https://www.instagram.com" target="_blank">
                   <div class="icon">
@@ -180,28 +184,24 @@
           <div class="share-button">
             <a href="https://www.facebook.com" target="_blank">
               <div class="icon"><i class="font-accent fa-facebook"></i></div>
-              <span>Facebook</span>
             </a>
           </div>
 
           <div class="share-button">
             <a href="https://x.com" target="_blank">
               <div class="icon"><i class="font-accent fa-twitter"></i></div>
-              <span>Twitter</span>
             </a>
           </div>
 
           <div class="share-button">
             <a href="https://www.instagram.com" target="_blank">
               <div class="icon"><i class="font-accent fa-instagram"></i></div>
-              <span>Instagram</span>
             </a>
           </div>
 
           <div class="share-button">
             <a href="https://www.youtube.com" target="_blank">
               <div class="icon"><i class="font-accent fa-youtube"></i></div>
-              <span>YouTube</span>
             </a>
           </div>
         </div>
