--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <header class="header">
       <a class="header__logo" href="#">
-        <img src="./image/logo.svg" alt="FunLearn logo" />
+        <img src="./image/logo.svg" alt="logo" />
       </a>
       <input type="checkbox" name="menu" id="menu" />
       <label for="menu"><i class="font-accent icon-bar"></i></label>
@@ -176,7 +176,7 @@
             <div class="swiper-wrapper">
               <div class="swiper-slide testimonials-item">
                 <div class="info">
-                  <img src="./image/woman.jpg" alt="review 1" />
+                  <img src="https://avatar.iran.liara.run/public" alt="review 1" />
                   <div class="name">Name Surname</div>
                 </div>
                 <p>
@@ -195,7 +195,7 @@
               </div>
               <div class="swiper-slide testimonials-item">
                 <div class="info">
-                  <img src="./image/woman.jpg" alt="review 2" />
+                  <img src="https://avatar.iran.liara.run/public/girl" alt="review 2" />
                   <div class="name">Name Surname</div>
                 </div>
                 <p>
@@ -214,7 +214,7 @@
               </div>
               <div class="swiper-slide testimonials-item">
                 <div class="info">
-                  <img src="./image/woman.jpg" alt="review 3" />
+                  <img src="https://avatar.iran.liara.run/public/boy" alt="review 3" />
                   <div class="name">Name Surname</div>
                 </div>
                 <p>
@@ -233,7 +233,7 @@
               </div>
               <div class="swiper-slide testimonials-item">
                 <div class="info">
-                  <img src="./image/woman.jpg" alt="review 4" />
+                  <img src="https://avatar.iran.liara.run/public/boy" alt="review 4" />
                   <div class="name">Name Surname</div>
                 </div>
                 <p>
@@ -258,33 +258,29 @@
     </main>
     <footer class="footer">
       <div class="footer__logo">
-        <img src="./image/logo.svg" alt="FunLearn logo" />
+        <img src="./image/logo.svg" alt="logo" />
         <div class="share">
           <div class="share-button">
             <a href="https://www.facebook.com" target="_blank">
               <div class="icon"><i class="font-accent fa-facebook"></i></div>
-              <span>Facebook</span>
             </a>
           </div>
 
           <div class="share-button">
             <a href="https://x.com" target="_blank">
               <div class="icon"><i class="font-accent fa-twitter"></i></div>
-              <span>Twitter</span>
             </a>
           </div>
 
           <div class="share-button">
             <a href="https://www.instagram.com" target="_blank">
               <div class="icon"><i class="font-accent fa-instagram"></i></div>
-              <span>Instagram</span>
             </a>
           </div>
 
           <div class="share-button">
             <a href="https://www.youtube.com" target="_blank">
               <div class="icon"><i class="font-accent fa-youtube"></i></div>
-              <span>YouTube</span>
             </a>
           </div>
         </div>
